[package]
name = "apicula"
version = "0.1.1-dev"
authors = ["scurest <scurest@users.noreply.github.com>"]
license = "0BSD"
build = "build.rs"

[dependencies]
atty = "0.2"
cgmath = "0.16.0"
glium = "0.23.0"
json = "0.11"
log = { version = "0.4.6", features = ["std"] }
png = "0.11.0"
termcolor = "0.3.5"
time = "0.1.36"
wild = "2.0.2"

[build-dependencies]
time = "0.1.36"

[profile.release]
panic = "abort"
